--- a/frontend/src/styles/typography.scss
+++ b/frontend/src/styles/typography.scss
@@ -21,6 +21,40 @@ a {
   font-size: inherit;
   font-weight: inherit;
   text-decoration: none;
+  &.link--primary {
+    color: $c-white;
+    font-size: 36px;
+    position: relative;
+    overflow: hidden;
+    display: inline-block;
+    &:after,
+    &:before {
+      content: "";
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: 4px;
+      height: 1px;
+      width: 100%;
+    }
+
+    &:before {
+      background-color: rgba(255, 255, 255, 0.4);
+    }
+
+    &:after {
+      background-color: $c-white;
+      transform: translate3d(-100%, 0, 0);
+      transition: transform 0.5s cubic-bezier(1, 0.01, 0.7, 0.93);
+      will-change: transform;
+    }
+
+    &:hover {
+      &:after {
+        transform: translate3d(0, 0, 0);
+      }
+    }
+  }
 }
 
 ol,
