--- a/frontend/src/styles/variables.scss
+++ b/frontend/src/styles/variables.scss
@@ -1,6 +1,7 @@
 $c-white: #fff;
+// $c-black: #0a0a0a;
 $c-black: #000;
 $f-type: "Cormorant", serif;
 
 // Layout
-$m-left-1: 11.33%;
+$m-left-1: 9.6%;
