--- a/frontend/src/styles/typography.scss
+++ b/frontend/src/styles/typography.scss
@@ -44,7 +44,7 @@ a {
 
     &:after {
       background-color: $c-white;
-      transform: translate3d(-100%, 0, 0);
+      transform: translate3d(-101%, 0, 0);
       transition: transform 0.5s cubic-bezier(1, 0.01, 0.7, 0.93);
       will-change: transform;
     }
@@ -61,9 +61,19 @@ ol,
 ul {
   list-style-position: inside;
   list-style: none;
+  margin: 0;
+  padding: 0;
+  li {
+    display: inline;
+  }
 }
 
 h2 {
   font-size: 36px;
   font-weight: 400;
+}
+
+p {
+  font-size: 24px;
+  line-height: 32px;
 }
